--- a/codes/config.ini
+++ b/codes/config.ini
@@ -7,12 +7,13 @@ learningRate = 1e-3
 trainRatio = 0.8
 optimizer = Adam
 loss = dice_coeff
-size = 128
-epochs = 10
-batchSize = 20
+size = 224
+epochs = 300
+batchSize = 14
 modelWeightLoad = False
-modelWeight = 2019-09-17 12:22:27.449158_epoch-3_dice-0.0.pth
+modelWeight = 2019-12-28 21:06:31.363449_epoch-15_dice-0.47202138930913945.pth
 saveBestModel = True
+loadCkpt = False
 
 [TRAIN]
 
