--- a/codes/config.ini
+++ b/codes/config.ini
@@ -3,14 +3,16 @@
 imagesPath = ../data/train/raw
 masksPath = ../data/train/mask
 checkpointsPath = ../checkpoints
+logHistoryPath = ../logs/history
+logOutPath = ../logs/out
+modelName = DeepLabV3
 learningRate = 1e-3
 trainRatio = 0.8
-optimizer = Adam
-loss = dice_coeff
+optimizer = SGD
+loss_fn = bce_logit_with_dice_loss
 size = 224
-epochs = 300
-batchSize = 14
-modelWeightLoad = False
+epochs = 200
+batchSize = 13
 modelWeight = 2019-12-28 21:06:31.363449_epoch-15_dice-0.47202138930913945.pth
 saveBestModel = True
 loadCkpt = False
@@ -27,9 +29,9 @@ loss = dice_coeff
 size = 128
 epochs = 10
 batchSize = 20
-modelWeightLoad = False
 modelWeight = 2019-09-17 12:22:27.449158_epoch-3_dice-0.0.pth
 saveBestModel = True
+loadCkpt = False
 
 [TEST]
 testImagePath = ../data/test/raw
