minor upgrade for training

--- a/codes/config.ini
+++ b/codes/config.ini
@@ -8,7 +8,7 @@ logOutPath = ../logs/out
 modelName = DeepLabV3
 learningRate = 1e-3
 trainRatio = 0.8
-optimizer = SGD
+optimizer = Adam
 loss_fn = bce_logit_with_dice_loss
 size = 224
 epochs = 200
