deeplab running in clust,loss weightized

--- a/codes/config.ini
+++ b/codes/config.ini
@@ -1,21 +1,21 @@
 [DEFAULT]
 
-imagesPath = ../data/train/raw
-masksPath = ../data/train/mask
-checkpointsPath = ../checkpoints
-logHistoryPath = ../logs/history
-logOutPath = ../logs/out
-modelName = DeepLabV3
-learningRate = 1e-3
-trainRatio = 0.8
+imagespath = ../data/hardDataset/train/raw
+maskspath = ../data/hardDataset/train/mask
+checkpointspath = ../checkpoints
+loghistorypath = ../logs/history
+logoutpath = ../logs/out
+modelname = DeepLabV3
+learningrate = 1e-2
+trainratio = 0.85
 optimizer = Adam
 loss_fn = bce_logit_with_dice_loss
 size = 224
-epochs = 200
-batchSize = 13
-modelWeight = 2019-12-28 21:06:31.363449_epoch-15_dice-0.47202138930913945.pth
-saveBestModel = True
-loadCkpt = False
+epochs = 100
+batchsize = 52
+modelweight = 2020-01-14-02-58-43.pth
+savebestmodel = True
+loadckpt = True
 
 [TRAIN]
 
