DeepLabV3 infer with morph snake,plotting included

--- a/codes/config.ini
+++ b/codes/config.ini
@@ -1,13 +1,13 @@
 [DEFAULT]
 
-imagespath = ../data/hardDataset/train/raw
-maskspath = ../data/hardDataset/train/mask
-checkpointspath = ../checkpoints
-loghistorypath = ../logs/history
-logoutpath = ../logs/out
-modelname = DeepLabV3
-learningrate = 1e-2
-trainratio = 0.85
+imagesPath = ../data/BUSI/train/raw
+masksPath = ../data/BUSI/train/mask
+checkpointsPath = ../checkpoints
+logHistoryPath = ../logs/history
+logOutPath = ../logs/out
+modelName = DeepLabV3
+learningRate = 1e-3
+trainRatio = 0.8
 optimizer = Adam
 loss_fn = bce_logit_with_dice_loss
 size = 224
@@ -34,9 +34,14 @@ saveBestModel = True
 loadCkpt = False
 
 [TEST]
-testImagePath = ../data/test/raw
-testMaskPath = ../data/test/mask
-predMaskPath = ../data/test/predMask
-size = 128
+imagesPath = ../data/BUSI/test/raw
+masksPath = ../data/BUSI/test/mask
+predMaskPath = ../infer
+checkpointsPath = ../checkpoints
+logHistoryPath = ../logs/history
+logOutPath = ../logs/out
+modelName = DeepLabV3
+loss_fn = bce_logit_with_dice_loss
+size = 224
 batchSize = 1
-modelWeight = 2019-08-24 22:04:47.926051_epoch-2_dice-0.4657724715059712.pth
+modelWeight = 2020-01-14-02-58-43.pth
