--- a/codes/config.ini
+++ b/codes/config.ini
@@ -11,11 +11,11 @@ trainRatio = 0.8
 optimizer = Adam
 loss_fn = bce_logit_with_dice_loss
 size = 224
-epochs = 100
-batchsize = 52
+epochs = 2
+batchsize = 2
 modelweight = 2020-01-14-02-58-43.pth
 savebestmodel = True
-loadckpt = True
+loadckpt = False
 
 [TRAIN]
 
@@ -34,6 +34,7 @@ saveBestModel = True
 loadCkpt = False
 
 [TEST]
+
 imagesPath = ../data/BUSI/test/raw
 masksPath = ../data/BUSI/test/mask
 predMaskPath = ../infer
@@ -43,5 +44,22 @@ logOutPath = ../logs/out
 modelName = DeepLabV3
 loss_fn = bce_logit_with_dice_loss
 size = 224
-batchSize = 1
+batchSize = 4
 modelWeight = 2020-01-14-02-58-43.pth
+
+[DTEST]
+
+imagesPath = ../data/BUSI/test/temp_raw
+masksPath = ../data/BUSI/test/temp_mask
+predMaskPath = ../infer
+checkpointsPath = ../checkpoints
+logHistoryPath = ../logs/history
+logOutPath = ../logs/out
+modelName = DeepLabV3-UNet
+modelName1 = UNet
+modelName2 = DeepLabV3
+loss_fn = bce_logit_with_dice_loss
+size = 224
+batchSize = 1
+model1Weight = 2020-01-15-07-17-04.pth
+model2Weight = 2020-01-14-02-58-43.pth
