--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,10 @@ logs/*
 !logs/placeholder.txt
 !logs/history/placeholder.txt
 !logs/out/placeholder.txt
-infer/*
-!infer/placeholder.txt
+infer/UNet/*
+infer/DeepLabV3/*
+infer/DeepLabV3-UNet/*
+infer/LungNet/*
+!infer/DeepLabV3-UNet/2020-02-12-05-08-39/
+!infer/DeepLabV3-UNet/2020-02-12-04-52-57/
 dsprl.code-workspace
